--- a/fds-evaluator/pom.xml
+++ b/fds-evaluator/pom.xml
@@ -20,5 +20,11 @@
   </properties>
 
   <dependencies>
+      <dependency>
+          <groupId>com.hyunje.fds</groupId>
+          <artifactId>fds-system</artifactId>
+          <version>0.1-SNAPSHOT</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 </project>
