--- a/fds-evaluator/pom.xml
+++ b/fds-evaluator/pom.xml
@@ -2,29 +2,30 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <parent>
-    <artifactId>fds-system</artifactId>
-    <groupId>com.hyunje.fds</groupId>
-    <version>0.1-SNAPSHOT</version>
-  </parent>
-  <modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.hyunje.fds</groupId>
+        <artifactId>fds-system</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-  <artifactId>fds-evaluator</artifactId>
+    <artifactId>fds-evaluator</artifactId>
+    <packaging>pom</packaging>
 
-  <name>fds-evaluator</name>
+    <name>fds-evaluator</name>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.9</maven.compiler.source>
-    <maven.compiler.target>1.9</maven.compiler.target>
-  </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
-  <dependencies>
-      <dependency>
-          <groupId>com.hyunje.fds</groupId>
-          <artifactId>fds-system</artifactId>
-          <version>0.1-SNAPSHOT</version>
-          <scope>compile</scope>
-      </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>com.hyunje.fds</groupId>
+            <artifactId>fds-system</artifactId>
+            <version>${project.parent.version}</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
